2016-10-11  Richard Biener  <rguenther@suse.de>

PR debug/77931
	* gimple-low.c (lower_gimple_bind): Handle arbitrary common
	sub-chains of BLOCK_VARS and gimple_bind_vars.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@240991 138bc75d-0d04-0410-961f-82ee72b054a4